--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,8 +4,9 @@
 
 html,
 body {
+  display: flex;
   padding: 0;
-  margin: 0;
+  margin: auto;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
