--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -2,6 +2,11 @@
   height: 140px;
   width: 100px;
   cursor: pointer;
+  transition: all 1s;
+}
+
+.hidden {
+  opacity: 0;
 }
 
 .cardInner {
@@ -24,7 +29,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: #ddd;
+  background-color: rgb(240, 240, 240);
   background-position: center;
   background-repeat: no-repeat;
   -webkit-backface-visibility: hidden;
