--- a/src/styles/NewSingle.module.css
+++ b/src/styles/NewSingle.module.css
@@ -7,6 +7,10 @@
 }
 
 .main {
+  margin-top: 20px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: center;
 }
