--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -37,8 +37,10 @@
   border-radius: 10px;
 }
 
-.background>* {
+.background *,
+.foreground * {
   border-radius: 10px;
+  -webkit-user-drag: none;
 }
 
 .foreground {
