--- a/src/styles/SingleGame.module.css
+++ b/src/styles/SingleGame.module.css
@@ -4,6 +4,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 600px;
+  margin-bottom: 100px;
 }
 
 .main {
